--- a/styles.css
+++ b/styles.css
@@ -211,30 +211,9 @@ footer li {
 }
 
 .plot-slide {
-  flex: 1 1 auto; 
+  flex: 1;
   display: none;
 }
-
-.plot-slide iframe {
-  width: 100%;
-  height: 400px; /* default for desktop */
-  border: none;
-  border-radius: 12px;
-}
-
-/* Responsive adjustment */
-@media (max-width: 768px) {
-  .plot-slide iframe {
-    height: 350px;
-  }
-}
-
-@media (max-width: 480px) {
-  .plot-slide iframe {
-    height: 260px;
-  }
-}
-
 
 .plot-slide.active {
   display: block;
